<resources>
    <string name="app_name">WifiP2P</string>
    <string name="app_version">1.0</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="wifi_direct">Wifi Direct Chat</string>
    <string name="remote_service_started">remote_service_started</string>
    <string name="remote_service_stopped">remote_service_stopped</string>
    <string name="local_service_label">local_service_label</string>
    <string name="homeWelcomeMessage">Wifiota</string>
    <string name="preference_file_key">com.flashwifi.wifip2p.iota_wifi_file</string>
    <string name="number_of_usages">numberOfUsages</string>
    <string name="active_seed">activeSeed</string>
    <string name="passwordField">Password</string>
    <string name="no_seed_present">We have no active seed</string>
    <string name="generateSeed">Generate Seed</string>
    <string name="weStoreThisSeed">The seed will be stored encrypted on your phone. Please supply a password. There is no fallback if you loose this password.</string>
    <string name="newPasswordField">Choose a new password</string>
    <string name="new_password">Use this password</string>
    <string name="encrypted_seed">encryptedSeed</string>
    <string name="seed_stored">The new seed is stored.</string>
    <string name="decryptTheSeed">Decrypt the Seed</string>
    <string name="seed_decrypted">The seed got decrypted.</string>
    <string name="password_empty">Please enter a password</string>
    <string name="wrong_password">Password was wrong.</string>
    <string name="startAP">Start Wifiota Access Point</string>
    <string name="findAP">Search for Wifiota Access Point</string>
    <string name="generateITPs">Generate ITPs (initial trust payments)</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">Wifiota</string>
    <string name="menuSearchHotspot">Search Hotspot</string>
    <string name="menuStartHotspot">Start Hotspot</string>
    <string name="initialTrustPayment">Initial Trust Payment</string>
    <string name="fundWallet">Fund Wallet</string>
    <string name="navConditions">Conditions</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotspotIntroduction">Do you want to start a new Wifiota hotspot?</string>
    <string name="internetTestSuccess">Your device has access to the internet</string>
    <string name="iotaNodeTestSuccess">Connection to Iota Node is possible.</string>

    <!-- Fund Wallet Fragment -->
    <string name="FundWalletAddressLabel">DEPOSIT ADDRESS:</string>
    <string name="FundWalletBalanceLabel">ACCOUNT BLANCE: </string>
    <string name="FundWalletQRCodeLabel">QR CODE: </string>

    <string name="QRCodeContentDescription">QR Code</string>

    <!-- Withdraw Wallet Fragment -->
    <string name="WithdrawWalletBalanceLabel">ACCOUNT BALANCE: </string>
    <string name="WithdrawWalletTransferLabel">NEW TRANSFER: </string>
    <string name="QRScannerDescription">QR Code Scanner</string>
    <string name="startWifiP2P">Start WiFi P2P</string>
    <string name="searching">Searching</string>
    <string name="off">Off</string>
    <string name="wifi_p2p_discovery">WiFi P2P</string>
    <string name="on">On</string>
    <string name="roamingTitle">Roaming</string>
    <string name="searchIntroduction">Do you want to search for a hotspot?</string>
    <string name="startSearch">Start Search</string>
    <string name="roaming_title">Roaming (This is your hotspot)</string>
    <string name="roaming_title_client">Roaming (You are consuming)</string>
    <string name="channelClosed">The payment channel was closed.</string>
    <string name="initRetransfer">Initializing retransfer</string>
    <string name="welcome">Welcome to the Wifi Iota Hotspot App</string>
    <string name="notification_doing_nothing">Currently doing nothing</string>
    <string name="stopAP">Stop Hotspot</string>
    <string name="startAPText">Start Hotspot</string>

    <!-- Settings Fragment -->

    <!-- Welcome Slideshow -->
    <!-- Page 1 -->
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="save">Save</string>

    <string name="dialog_message_pw">Password missing!</string>
    <string name="dialog_title_pw">Please enter a password</string>


    <string name="slide_1_title">Welcome to Wifiota!</string>

    <string name="slide_2_desc">Share remaining megabytes from your data plan and get paid Iota. Or get access to WiFi in foreign countries, airports or coffee shops in exchange for Iota.</string>
    <string name="slide_3_desc">In order to discover, communicate and share WiFi with people around you, please give the following permissions.</string>
    <string name="slide_4_desc">The app creates a new seed for you which is something like a cryptographic password for your iota balance. You can deposit and withdraw to it. </string>
    <string name="slide_5_desc">The app will only store a version of the seed that is encrypted by a password. Please enter a password! </string>
    <string name="slide_6_desc">Have fun with Wifiota and please always remember that we are still working on this app.</string>
    <string name="ready">Ready</string>

</resources>