<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.flashwifi.wifip2p.HomeActivity">

    <ImageView
        android:id="@+id/splashscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/homeWelcomeMessage"
        android:src="@drawable/otter"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:alpha="0.2"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/homeWelcomeMessage"
            android:textSize="30sp" />


        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordField"
            android:inputType="textPassword"
            android:visibility="invisible"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decryptTheSeed"
            android:id="@+id/decryptTheSeedButton"
            android:visibility="invisible" />

        <Button
            android:id="@+id/generateSeedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generateSeed"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/seedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text=""
            android:textColor="#111111"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/seedComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/weStoreThisSeed"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/newPasswordField"
            android:inputType="textPassword"
            android:visibility="invisible"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <Button
            android:id="@+id/new_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:visibility="invisible"
            android:layout_marginTop="10dp"/>




    </LinearLayout>



</android.support.v4.widget.DrawerLayout>